--- a/recipes/biriyani.html
+++ b/recipes/biriyani.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Biriyani</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/biriyani.html">Biriyani</a>
-    
+   <h1>Biriyani</h1> 
 </body>
 </html>
