added recipy preparation directions

--- a/recipes/biriyani.html
+++ b/recipes/biriyani.html
@@ -8,5 +8,22 @@
 </head>
 <body>
    <h1>Biriyani</h1> 
+   <img src="https://www.allrecipes.com/thmb/2ay1KcV9364h_jGBtpfJ9T0BMEA=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/68506-756cc95b67234d6492ab18b982de583d.jpg" alt="biriyani pic">
+   <p>Biriyani is south indian spicey dish, that everyone seem too enjoy</p>
+   <h4>Ingredients</h4>
+   <ul>
+    <li>Chicken</li>
+    <li>herbs</li>
+    <li>spices</li>
+    <li>Ghee</li>
+    <li>yogurt</li>
+   </ul>
+   <h4>Steps</h4>
+   <ol>
+    <li>cook rice till its 70% done</li>
+    <li>martinet the chicken with spices and yogurt</li>
+    <li>pour the cooked rice on the marinated chicken and seige the lid </li>
+    <li>cook for 10 minutes on the medium heat</li>
+   </ol>
 </body>
 </html>
