--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/biriyani.html">Biriyani</a>
+    <ul>
+        <li><a href="recipes/biriyani.html">Biriyani</a></li>
+        <li><a href="recipes/lambcurry.html">Lamb Curry</a></li>
+        <li><a href="recipes/chicken.html">Chicken Curry</a></li>
+    </ul>
+    
     
 </body>
 </html>
