added two more recipies

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
         <li><a href="recipes/biriyani.html">Biriyani</a></li>
         <li><a href="recipes/lambcurry.html">Lamb Curry</a></li>
-        <li><a href="recipes/chicken.html">Chicken Curry</a></li>
+        <li><a href="recipes/chickencurry.html">Chicken Curry</a></li>
     </ul>
     
     
